@@ -10,5 +10,12 @@ Prerequisites:
 - Make sure the JavaFX SDK version 21 binaries are installed
 - Make sure Dominion ECS version 0.9.0 is installed
 
+Next, download the code and `cd` into the folder. Then, compile:
+```
+javac -d ./bin/ -sourcepath ./src/ -classpath /path/to/this/binary/dominion-ecs-api-0.9.0.jar:/path/to/this/binary/dominion-ecs-engine-0.9.0.jar:./src/:./res/ --module-path /path/to/this/binary/javafx-sdk-21.0.3/lib --add-modules javafx.controls ./src/scripts/core/Main.java
+```
 
-## Technical Notes
+Next, run the game!
+```
+java -classpath ./bin/:/path/to/this/binary/dominion-ecs-api-0.9.0.jar:/path/to/this/binary/dominion-ecs-engine-0.9.0.jar:./src/:./res/ --module-path /path/to/this/binary/javafx-sdk-21.0.3/lib --add-modules javafx.controls scripts.core.Main
+```
